--- a/jins/pom.xml
+++ b/jins/pom.xml
@@ -18,6 +18,14 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <!--<scope>test</scope>-->
+        </dependency>
+    </dependencies>
+
     <properties>
         <main.basedir>${project.basedir}</main.basedir>
         <!-- Analysis Tools for CI -->
